[tool.poetry]
name = "python web 4-test"
version = "0.1.0"
description = ""
authors = ["RuslanStoliar <111749578+RuslanStoliar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python web 4_test"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
